# mcp-core

mcp-core/: Cargo.toml
mcp-core-macros/: Cargo.toml
mcp-core-macros/src/: lib.rs
