[package]
name = "mcp-core-macros"
version = "0.1.30"
edition = "2021"
description = "A Rust Macros library for mcp-core"
repository = "https://github.com/stevohuncho/mcp-core"
license = "Apache-2.0"
authors = ["https://github.com/stevohuncho"]
documentation = "https://github.com/stevohuncho/mcp-core/tree/main/mcp-core-macros"
homepage = "https://github.com/stevohuncho/mcp-core"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-core = "0.1.50"
async-trait = "0.1"
schemars = "1"
convert_case = "0.11.0"

[dev-dependencies]
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
anyhow = "1.0"
