[package]
name = "mcp-core"
version = "0.1.50"
edition = "2021"
description = "A Rust library implementing the Modern Context Protocol (MCP)"
repository = "https://github.com/stevohuncho/mcp-core"
license = "Apache-2.0"
authors = ["https://github.com/stevohuncho"]
documentation = "https://github.com/stevohuncho/mcp-core#readme"
homepage = "https://github.com/stevohuncho/mcp-core"
readme = "../README.md"

[dependencies]
tokio = { version = "1.50", features = ["time", "sync", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
futures = "0.3"
libc = "0.2.183"
# sse dependencies
uuid = { version = "1.22", features = ["v4"], optional = true }
actix-web = { version = "4", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
reqwest-eventsource = { version = "0.6.0", optional = true }

[features]
sse = ["actix-web", "uuid", "reqwest", "reqwest-eventsource"]


[dev-dependencies]
schemars = "1.2"
tokio = { version = "1.50", features = ["full"] }
tracing-subscriber = "0.3"
dotenv = "0.15.0"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
home = "0.5.12"
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "echo_server"
required-features = ["sse"]

[[example]]
name = "echo_client"
required-features = ["sse"]
